--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,8 @@ dependencies:
   flutter_spinkit: ^4.1.2+1
   provider: ^4.1.3
   extended_text_field: ^1.0.1
-  get_it: ^4.0.2
-
+  get_it: ^4.0.4
+  shared_preferences: ^0.5.10
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
@@ -52,6 +52,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/task.db
+    - assets/forest.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
