--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_fonts: ^1.1.0
   sqflite: ^1.3.0
-  flutter_spinkit: ^4.1.2+1
+  flutter_spinkit: ^4.1.2+1 #try to get rid of this pkg
   provider: ^4.1.3
-  extended_text_field: ^1.0.1
+  extended_text_field: ^4.0.0
   get_it: ^4.0.4
   shared_preferences: ^0.5.10
+  circular_check_box: ^1.0.4
+  inview_notifier_list: ^1.0.0
+  reorderables: ^0.3.2
+  dotted_border: ^1.0.6
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
