--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   inview_notifier_list: ^1.0.0
   reorderables: ^0.3.2
   dotted_border: ^1.0.6
+  scrollable_positioned_list: ^0.1.7
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
